# bri_data_wrangle

./: .gitignore  all_sessions_and_protocols.csv  all_sessions_and_protocols_from_guess.pkl  nagelhus.csv  nagelhus_pearson.csv  object_positions.csv  ori_sigs.csv  pyproject.toml
scripts/compute_scores/: compute_nagel_local.py  compute_ori.py  find_object_cells.py  find_object_cells_nagel.py
scripts/test_nagel/: combine_score_results.py  compute_scores.py  cool_examples.py  count_grid_cells.py  find_cool_examples.py  make_session_dataframe.py  play_with_session_dataframe.ipynb
scripts/test_nagel/summary_stuff/: make_all_positions.py
src/bri_data_wrangle/: filepaths.py  plotting.py  wrangle.py
src/bri_data_wrangle/scores/: firing_rate.py  nagelhus.py
